--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <h1>Batch 5 is just Amazing, Awesome,shaandaar, majedaar and I will attend Live sessions</h1>
+        <h1>node to do app deployed by Rubeena khan </h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
